# MonPortfolio

./: Pasted--Serving-Flask-app-app-Debug-mode-on-INFO-werkzeug-WARNING-This-is-a-development-server--1727911111386.txt  Pasted-TemplateSyntaxError-jinja2-exceptions-TemplateSyntaxError-Unexpected-end-of-template-Jinja-was-lo-1727779274499.txt  Pasted-please-i-want-you-to-make-a-portfolio-make-it-lok-really-cool-and-techy-ai-your-able-please-animat-1727770023373.txt  README.md  app.py  move_image.py  move_nft_images.py  pyproject.toml  replit.nix  replit_zip_error_log.txt  schema.sql
static/css/: styles.css
static/js/: main.js
templates/: blog.html  blog_post.html  chat.html  index.html  new_blog_post.html  project_details.html
